Fix: Adjust CSS code.

--- a/index.html
+++ b/index.html
@@ -25,20 +25,23 @@
         </section>
         <section id="section-cards">
             <div class="container">
-                <div class="card">
-                    <!-- icon -->
-                    <h3>Fácil de usar</h3>
-                    <span>Rápido para buscar produtos.</span>
-                </div>
-                <div class="card">
-                    <!-- icon -->
-                    <h3>Fácil de usar</h3>
-                    <span>Rápido para buscar produtos.</span>
-                </div>
-                <div class="card">
-                    <!-- icon -->
-                    <h3>Fácil de usar</h3>
-                    <span>Rápido para buscar produtos.</span>
+                <div class="cards">
+                    <h2>Porque o Vita App?</h2>
+                    <div class="card">
+                        <!-- icon -->
+                        <h3>Fácil de usar</h3>
+                        <span>Rápido para buscar produtos.</span>
+                    </div>
+                    <div class="card">
+                        <!-- icon -->
+                        <h3>Fácil de usar</h3>
+                        <span>Rápido para buscar produtos.</span>
+                    </div>
+                    <div class="card">
+                        <!-- icon -->
+                        <h3>Fácil de usar</h3>
+                        <span>Rápido para buscar produtos.</span>
+                    </div>
                 </div>
             </div>
         </section>
