Feat: Add Download section.

--- a/index.html
+++ b/index.html
@@ -6,27 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vita App</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <header></header>
+    <!-- <header>Cabeçalho</header> -->
     <main>
         <section id="section-hero">
             <div class="container">
-                <div class="column">
-                    fdsfs
-                </div>
-                <div class="column">
-                    <h1>OOdfiodjsfiosd</h1>
-                    <span>FSDFSDFSF</span>
-                    <button>Baixar o app</button>
+                <div class="columns">
+                    <div class="column">
+                        <img src="img/Mobile 1.png" height="500" width="500" alt="">
+                    </div>
+                    <div class="column">
+                        <h1>OOdfiodjsfiosd</h1>
+                        <span>FSDFSDFSF</span>
+                        <button>Baixar o app</button>
+                    </div>
                 </div>
             </div>
         </section>
         <section id="section-cards">
             <div class="container">
+                <h2>Porque o Vita App?</h2>
                 <div class="cards">
-                    <h2>Porque o Vita App?</h2>
                     <div class="card">
                         <!-- icon -->
                         <h3>Fácil de usar</h3>
@@ -42,6 +48,43 @@
                         <h3>Fácil de usar</h3>
                         <span>Rápido para buscar produtos.</span>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section id="section-tutorial">
+            <div class="container">
+                <h2>Simplifique suas compras</h2>
+                <div class="columns">
+                    <div class="column">
+                        <img src="img/Mobile 3.png" height="400" width="400" alt="">
+                    </div>
+                    <div class="column">
+                        <div class="">
+                            <h3>Entre ou cadastre-se.</h3>
+                            <span>Faça login rápido ou crie sua conta em segundos.</span>
+                        </div>
+                        <div class="">
+                            <h3>Adicione os produtos.</h3>
+                            <span>Navegue e escolha seus produtos favoritos com um toque.</span>
+                        </div>
+                        <div class="">
+                            <h3>Finalize e pronto!</h3>
+                            <span>Pague e receba seu pedido em minutos.</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="section-download">
+            <div class="container">
+                <h2>Faça o Download agora!</h2>
+                <span>Baixe o app e tenha todos os produtos na palma da mão.</span>
+                <div class="buttons">
+                    <a href=""></a>
+
+                </div>
+                <div class="img">
+                    <img src="img/Mobile 4.png" height="500" width="500" alt="">
                 </div>
             </div>
         </section>
